# autoware_universe.av4ev_gokart

f1tenth/: manual_setup.md  readme.md
f1tenth/f1tenth_gym_ros/: README.md  setup.py
f1tenth/f1tenth_gym_ros/config/: sim.yaml
f1tenth/f1tenth_gym_ros/f1tenth_gym/: pyproject.toml
f1tenth/f1tenth_gym_ros/launch/: gym_bridge_launch.py
f1tenth/f1tenth_system/vesc/vesc_driver/: CMakeLists.txt  package.xml
f1tenth/particle_filter/range_libc/pywrapper/: setup.py
f1tenth/recordreplay_planner/: package.xml
f1tenth/recordreplay_planner/include/recordreplay_planner/: recordreplay_planner.hpp
f1tenth/recordreplay_planner_msgs/: package.xml
f1tenth/recordreplay_planner_msgs/action/: RecordTrajectory.idl  ReplayTrajectory.idl
f1tenth/recordreplay_planner_msgs/srv/: ModifyTrajectory.idl
f1tenth/recordreplay_planner_nodes/: CMakeLists.txt
f1tenth/recordreplay_planner_nodes/include/recordreplay_planner_nodes/: recordreplay_planner_node.hpp
f1tenth/trajectory_follower_f1tenth/: CMakeLists.txt  package.xml
f1tenth/trajectory_follower_f1tenth/include/trajectory_follower_f1tenth/: f1tenth_trajectory_follower.hpp
f1tenth/trajectory_follower_f1tenth/src/: f1tenth_trajectory_follower.cpp
f1tenth/trajectory_follower_f1tenth/test/: test_controller_node.cpp
launch/tier4_perception_launch/launch/traffic_light_recognition/: traffic_light.launch.xml
planning/recordreplay_planner/src/recordreplay_planner/: recordreplay_planner.cpp
planning/recordreplay_planner_interface/: CMakeLists.txt  package.xml
planning/recordreplay_planner_interface/action/: RecordTrajectory.idl  ReplayTrajectory.idl
planning/recordreplay_planner_interface/srv/: ModifyTrajectory.idl
planning/recordreplay_planner_msgs/: CMakeLists.txt
planning/recordreplay_planner_nodes/: CMakeLists.txt  package.xml
planning/recordreplay_planner_nodes/include/recordreplay_planner_nodes/: recordreplay_planner_node.hpp
planning/recordreplay_planner_nodes/src/recordreplay_planner_nodes/: recordreplay_planner_node.cpp
sensing/isaac_sim/isaac_sim_pointcloud_adapter/: CMakeLists.txt  package.xml
sensing/isaac_sim/isaac_sim_pointcloud_adapter/launch/: isaac_sim_pointcloud_adapter.launch.xml
sensing/isaac_sim/isaac_sim_pointcloud_adapter/src/: isaac_sim_pointcloud_adapter_node.cpp
sensing/roboracer_max_sim/isaac_odom_to_pose/: CMakeLists.txt  package.xml
sensing/roboracer_max_sim/isaac_odom_to_pose/launch/: isaac_odom_to_pose.launch.yaml
sensing/roboracer_max_sim/isaac_odom_to_pose/src/: isaac_odom_to_pose_node.cpp
vehicle/roboracer_max_interface/: CMakeLists.txt  package.xml
vehicle/roboracer_max_interface/include/roboracer_max_interface/: roboracer_max_interface_node.hpp
vehicle/roboracer_max_interface/launch/: roboracer_max_interface.launch.yaml
vehicle/roboracer_max_interface/src/: roboracer_max_interface_node.cpp
